adjusting margin for .alerts to always display underneath navbar, (must use fixed margin-top because nav is on a separate z-index)

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,10 +15,6 @@ ul {
   padding-left: 0;
 }
 
-h1 {
-  padding-top: 35px;
-}
-
 .parent-container {
   @include outer-container;
 }
