--- a/app/assets/stylesheets/system-notifications.scss
+++ b/app/assets/stylesheets/system-notifications.scss
@@ -2,7 +2,8 @@
 @import 'variables';
 
 .alerts {
-  margin-top: 40px;
+  margin-top: 46px;
+  height: auto;
 
   #notice {
     background-color: lightblue;
